# equinix-smartview-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: test.yml
docs/: QUICKSTART.md
scripts/: install.bat  install.sh
src/equinix_smartview_mcp/: __init__.py  server.py
